# video-storage

./: .env  .gitignore  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
backend/: README.md
backend/app/: .gitignore  pyproject.toml
backend/app/alembic/versions/: e093f301eba9_add_file_table_for_file_uploading.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: files.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  crud_file.py
backend/app/app/db/: base.py
backend/app/app/models/: file.py
backend/app/app/schemas/: __init__.py  file.py
backend/app/app/tests/api/api_v1/: test_files.py
cli/: README.md  pyproject.toml
cli/tests/: test_video_store.py
cli/video_store/: main.py
etc/: openapi.yml  video2.mpeg
