[tool.poetry]
name = "video-store"
version = "0.1.0"
description = ""
authors = ["Vanja <vanja@petreski.co>"]
readme = "README.md"

[tool.poetry.scripts]
video-store = "video_store.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.0"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
